feat: add path to csv